k8s/rundeck/deployment-rundeck-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rundeck-app-2
  namespace: rundeck-poc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rundeck-app-2
  template:
    metadata:
      labels:
        app: rundeck-app-2
    spec:
      containers:
      - name: rundeck-app-2
        image: rundeck_poc:1.0
        ports:
        - containerPort: 4440
