k8s/rundeck/deployment-rundeck.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rundeck-app
  namespace: rundeck-poc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rundeck-app
  template:
    metadata:
      labels:
        app: rundeck-app
    spec:
      containers:
      - name: rundeck-app
        image: rundeck_poc:2.0
        ports:
        - containerPort: 4440
        volumeMounts:
          - mountPath: /var/lib/rundeck/data
            name: rundeck-storage
      volumes:
      - name: rundeck-storage
        persistentVolumeClaim:
          claimName: rundeck-pvc
