k8s/rundeck/ingress-rundeck.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: rundeck-ingress
    namespace: rundeck-poc
spec:
    rules:
    - host: rundeck-poc.t1.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: rundeck-service
              port:
                  number: 4440
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: rundeck-2-ingress
    namespace: rundeck-poc
spec:
    rules:
    - host: ctti-rundeck.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: rundeck-service-2
              port:
                  number: 4441
